Dev/envoy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:tools-v1.27-latest
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 9901
        volumeMounts:
        - name: config
          mountPath: /etc/envoy/
        - name: tls 
          mountPath: /etc/ssl/certs/
      volumes:
      - name: config
        configMap:
          name: envoy-config
      - name: tls
        secret:
          secretName: envoy-tls
