Dev/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy 
spec:
  type: LoadBalancer
  ports:
  - port: 80
  - port: 443
  - port: 9901
